<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/nunito"
        android:text="345345"
        android:letterSpacing="0.2"
        android:textColor="#212222"
        android:textSize="25sp"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_field"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:minHeight="48dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:enabled="false"
        android:singleLine="true" />

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow style="@style/keyboard_row">

<!--            <TextView-->
<!--                android:id="@+id/t9_key_1"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/number_one" />-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_2"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_two"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_3"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_three"/>-->
            <TextView
                android:id="@+id/t9_key_1"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/keyboard_button_background"
                android:clickable="true"
                android:layout_marginEnd="2dp"
                android:width="20dp"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:tag="number_button"
                android:text="@string/number_one"
                android:textColor="#E4C4C9"
                android:focusable="true" />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="20dp"
                android:width="20dp"
                android:id="@+id/t9_key_2"
                android:clickable="true"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:tag="number_button"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_two"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:width="20dp"
                android:id="@+id/t9_key_3"
                android:clickable="true"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:tag="number_button"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_three"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

<!--            <TextView-->
<!--                android:id="@+id/t9_key_4"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_four"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_5"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_five"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_6"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_six"/>-->
            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_4"
                android:clickable="true"
                android:width="20dp"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:tag="number_button"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_four"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_5"
                android:clickable="true"
                android:layout_marginEnd="2dp"
                android:width="20dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:tag="number_button"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_five"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />

            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_6"
                android:clickable="true"
                android:layout_marginEnd="2dp"
                android:width="20dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:tag="number_button"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_six"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

<!--            <TextView-->
<!--                android:id="@+id/t9_key_7"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_seven"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_8"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_eight"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_9"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_nine"/>-->
            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_7"
                android:clickable="true"
                android:layout_marginEnd="2dp"
                android:width="20dp"
                android:tag="number_button"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_seven"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_8"
                android:clickable="true"
                android:width="20dp"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:tag="number_button"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_eight"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />

            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_9"
                android:clickable="true"
                android:width="20dp"
                android:tag="number_button"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_nine"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

<!--            <TextView-->
<!--                android:id="@+id/t9_key_clear"-->
<!--                style="@style/keyboard_button"-->
<!--                android:text="@string/btn_clear"-->
<!--                android:textAppearance="?android:attr/textAppearanceMedium"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_0"-->
<!--                style="@style/keyboard_number_button"-->
<!--                android:text="@string/number_zero"/>-->

<!--            <TextView-->
<!--                android:id="@+id/t9_key_backspace"-->
<!--                style="@style/keyboard_button"-->
<!--                android:text="@string/btn_backspace"-->
<!--                android:textAppearance="?android:attr/textAppearanceMedium"/>-->
            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_clear"
                android:clickable="true"
                android:width="20dp"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/btn_clear"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_0"
                android:clickable="true"
                android:width="20dp"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/number_zero"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />

            <TextView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:id="@+id/t9_key_backspace"
                android:clickable="true"
                android:width="20dp"
                android:layout_gravity="center"
                android:textColor="#E4C4C9"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/btn_backspace"
                android:background="@drawable/keyboard_button_background"
                android:focusable="true" />
        </TableRow>
    </TableLayout>
</LinearLayout>